--- a/src/scss/components/global.scss
+++ b/src/scss/components/global.scss
@@ -105,3 +105,7 @@ a {
 img {
 	vertical-align: bottom;
 }
+
+* {
+	white-space: normal;
+}
